* Removed .php5 files.
* Ripped out AjaxDispatcher and AjaxResponse.